# kernel-comparator

./: CMakeLists.txt  LICENSE  README.md
examples/linux-headers-6.5.0-18-generic/: .config
include/: comparator.hpp  config_data.hpp
src/: comparator.cpp  config_data.cpp  main.cpp
